WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
188582
HashMap<Ref<P>, V> asserts when V is not zero for its empty value
https://bugs.webkit.org/show_bug.cgi?id=188582
Summary
HashMap<Ref<P>, V> asserts when V is not zero for its empty value
Saam Barati
Reported
2018-08-14 15:19:27 PDT
Basically, we end up with code that does this: Ref<P>(Ref<P>(HashTableEmptyValue)) Which: - invokes move constructor on an incoming empty value - that incoming empty value has nullptr for m_ptr - The move constructor calls leakRef on the incoming value - leakRef does: ASSERT(m_ptr)
Attachments
patch
(6.99 KB, patch)
2018-08-14 18:25 PDT
,
Saam Barati
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Saam Barati
Comment 1
2018-08-14 18:25:16 PDT
Created
attachment 347141
[details]
patch
WebKit Commit Bot
Comment 2
2018-08-14 21:08:15 PDT
Comment on
attachment 347141
[details]
patch Clearing flags on attachment: 347141 Committed
r234879
: <
https://trac.webkit.org/changeset/234879
>
WebKit Commit Bot
Comment 3
2018-08-14 21:08:17 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4
2018-08-14 21:09:20 PDT
<
rdar://problem/43318499
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug